fixed alignment and modal issues

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fbf6ee;
+    background-color: #f9faff;
 }
 
 .centered {
@@ -7,43 +7,56 @@ body {
     margin-right: auto;
 }
 
+.navBtns {
+    margin: 0;
+    padding: 2px;
+}
+
 #logoPic {
 	display: block;
     border-radius: 30px;
+    margin-bottom: 10px;
     transition: transform .2s; /* Animation */
     max-width: 100%;
     -webkit-animation-duration: 3s;
     -webkit-animation-delay: 1s;
 }
 
-.button-nav {
-    height: 50px;
-}
-
 #parkBtn {
-	padding: 5px;
-    transition: transform .2s; /* Animation */
+	transition: transform .2s; /* Animation */
     max-width: 100%;
-    margin: 0 auto;
+    margin: 0, 0;
     -webkit-animation-delay: 4s;
 }
 
 #leaveBtn {
-	padding: 5px;
     transition: transform .2s; /* Animation */
     max-width: 100%;
-    margin: 0 auto;
+    margin: 0, 0;
     -webkit-animation-delay: 5s;
 }
 
 #regBtn {
     transition: transform .2s; /* Animation */
-    border-radius: 25px;
     width: 100%;
+    border-radius: 25px;
     height: 100%;
-    margin: 0 auto;
-    font-size: 20px;
+    font-size: 12px;
+    text-align: center;
+    color: black;
     -webkit-animation-delay: 6s;
+}
+
+
+#contactBtn {
+    transition: transform .2s; /* Animation */
+    width: 100%;
+    border-radius: 25px;
+    height: 100%;
+    font-size: 12px;
+    text-align: center;
+    color: black;
+    -webkit-animation-delay: 7s;
 }
 
 #parkBtn:hover {
@@ -59,14 +72,14 @@ body {
     transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
-#myModal {
+/*#myModal {
     margin-top: 50px; 
 }
 
 #aboutModal {
     margin-top: 50px; 
 }
-
+*/
 .modal {
     border-radius: 30px;
     font-size: 13px;
